[workspace]
members = [".", "teeline-wasm", "teeline-cli"]
default-members = ["."]
resolver = "2"

[package]
name = "teeline"
version = "0.3.0"
authors = ["Timo Sulg <timgluz@gmail.com>"]
edition = "2024"

[lib]
name = "teeline"
path = "src/lib.rs"

[dependencies]
clap = "4.6.1"
rand = "0.9"
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wasmtime = { version = "36", features = ["component-model"] }
wasmtime-wasi = "36"
