[workspace]
members = [".", "teeline-wasm", "teeline-cli", "teeline-qt"]
default-members = ["."]
resolver = "2"

[package]
name = "teeline"
version = "1.0.0"
authors = ["Timo Sulg <timgluz@gmail.com>"]
edition = "2024"
repository = "https://github.com/timgluz/teeline"
license = "MIT"
keywords = ["tsp", "optimization"]

[lib]
name = "teeline"
path = "src/lib.rs"

[dependencies]
clap = "4.6.1"
rand = "0.9"
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wasmtime = { version = "36", features = ["component-model"] }
wasmtime-wasi = "36"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
