[workspace]
members = [".", "teeline-cli"]
exclude = ["teeline-wasm"]
default-members = ["."]
resolver = "2"

[package]
name = "teeline"
version = "1.0.10"
authors = ["Timo Sulg <timgluz@gmail.com>"]
edition = "2024"
repository = "https://github.com/timgluz/teeline"
license = "MIT"
keywords = ["tsp", "optimization"]

[lib]
name = "teeline"
path = "src/lib.rs"

[features]
default = []
json = ["dep:serde_json"]

[dependencies]
clap = "4.6.1"
num-complex = "0.4"
rand = "0.10"
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
