[package]
name = "teeline-api"
version = "0.1.0"
edition = "2024"
authors = ["Timo Sulg <timgluz@gmail.com>"]
repository = "https://github.com/timgluz/teeline"
license = "MIT"
keywords = ["tsp", "optimization"]

[[bin]]
name = "teeline-api"
path = "src/main.rs"

[dependencies]
teeline = { path = ".." }
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
utoipa = "5.5.0"
tower-http = { version = "0.7.0", features = ["trace"] }
tower_governor = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-axum = "0.2.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
