[package]
name = "teeline-cli"
version = "0.1.0"
edition = "2024"
authors = ["Timo Sulg <timgluz@gmail.com>"]
repository = "https://github.com/timgluz/teeline"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["tsp", "optimization"]


[lib]
name = "teeline_cli"

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
teeline = { path = ".." }
eframe = { version = "0.33", features = ["x11", "wayland"] }
clap = "4.6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
