[package]
name = "teeline-cli"
version = "1.0.6"
edition = "2024"
authors = ["Timo Sulg <timgluz@gmail.com>"]
repository = "https://github.com/timgluz/teeline"
license = "MIT"
keywords = ["tsp", "optimization"]

[[bin]]
name = "teeline"
path = "src/main.rs"

[dependencies]
teeline = { path = ".." }
clap = "4.6.1"
usage-lib = { version = "3.5.2", features = ["clap"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
