[workspace]

[package]
name = "teeline-qt"
version = "0.1.0"
edition = "2024"
authors = ["Timo Sulg <timgluz@gmail.com>"]
repository = "https://github.com/timgluz/teeline"
license = "LGPL-3.0-or-later"
description = "Qt 6 GUI for the Teeline TSP solver"

[[bin]]
name = "teeline-qt"
path = "src/main.rs"

[package.metadata.dist]
dist = false  # requires Qt runtime; not a standalone distributable binary

[dependencies]
qtbridge = { git = "https://github.com/qt/qtbridge-rust", rev = "66583b7be5f7060feb27790741996ce350836091" }
teeline = { path = ".." }
serde_json = "1"
