[package]
name = "teeline-wasm"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.dist]
dist = false

[package.metadata.component]
package = "teeline:solver"

[package.metadata.component.target]
path = "wit"
world = "solver"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
teeline = { path = "..", default-features = false, features = ["json"] }

[dev-dependencies]
wasmtime = { version = "45", features = ["component-model"] }
wasmtime-wasi = "45"
